--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -150,7 +150,7 @@ a[aria-label]:hover {
 }
 
 .bg-green-400:hover {
-  background-color: #38a169;
+  background-color: #56c27d;
 }
 
 /* Footer Image Section */
